--- a/server/copybox-server.cabal
+++ b/server/copybox-server.cabal
@@ -21,12 +21,16 @@ executable copybox-server
   -- other-extensions:    
   build-depends:      base
                     , text
+                    , bytestring
                     , mtl
+                    , directory
                     , aeson
+                    , ConfigFile
+                    , Crypto
                     , wai
                     , warp
+                    , warp-tls
                     , servant
                     , servant-server
-                    , directory
   hs-source-dirs:     src
   default-language:   Haskell2010
