--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -8,7 +8,8 @@ packages:
 - '.'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- Crypto-4.2.5.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
